kubernetes/app-deployment.yml
kind: Service
apiVersion: v1
metadata:
  name: smartbids-backend
  labels:
    name: smartbids-backend
spec:
  ports:
    - nodePort: 30163
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: smartbids-backend
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartbids-backend
spec:
  selector:
    matchLabels:
      app: smartbids-backend
  replicas: 2
  template:
    metadata:
      labels:
        app: smartbids-backend
    spec:
      containers:
        - name: smartbids-backend
          image: lmsamarawickrama/smartbids-backend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
