kubernetes/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - host: smart-bids.info
      http:
        paths:
          - path: /
            backend:
              serviceName: smartbids-backend
              servicePort: 8080
